# spec

./: .gitleaks.toml  AGENTS.md  CNAME  CONTRIBUTING.md  README.md  Taskfile.yml  _config.yml  pyproject.toml
.github/rulesets/: README.md  branch-main-history-integrity.json  branch-main-review-gate.json
.github/workflows/: verify.yml
conformance/: README.md  aggregation.json  decision.json  levels.json  policy-transition.json  precedence.json  predicate-v0.2.json  propagation.json  publishing-profile.json  range.json  review-qualification.json  version-ancestry.json
conformance/crypto/: README.md  allowed_signers  build-fixture-repos.sh  signature-vectors.json
conformance/predicate-v0.2/: release-missing-authority-identity.json  release-valid-source-evidence-extension.json  release-valid.json  review-missing-effective-at-merge.json  review-valid.json
docs/: conformance-crypto-fixtures.md  design-record.md
docs/adr/: 0001-encode-trust-in-semver-pre-release-identifiers-not-build-metadata.md  0004-derivation-proofs-are-the-only-exception-to-weakest-link-flooring.md  0007-configuration-is-the-root-of-trust-meta-path-violations-hard-fail.md  0015-derivation-inputs-pin-via-language-native-mechanisms-not-environment-managers.md  0020-incorporate-go-semver-as-reviewed-re-commits.md  README.md  (+20 more)
release/: v0.1.md  v0.2.md
review/: v0.1.md  v0.2.md
schemas/: README.md  release-v0.1.json  release-v0.2.json  review-v0.1.json  review-v0.2.json
scripts/: check-conformance.py  check-drift.py  check-rulesets.py
spec/: semver-trust.md
(+25 files in other folders)
