# SPDX-License-Identifier: Apache-2.0
# Tooling configuration for this repository's scripts.
#
# Deliberately dependency-light: scripts/ should run on bare Python
# (>= 3.11, for tomllib). One recorded exception: check-conformance.py
# imports jsonschema (dev group, pinned by uv.lock) because schema
# validation at the attestation-fixture freeze gate must be a real
# Draft 2020-12 validator, not a hand-rolled subset (PR #16 review,
# 2026-07-11). Adding a [project.dependencies] entry is still a
# decision, not a convenience — see docs/adr/.

[project]
name = "semver-trust-spec-scripts"
version = "0.0.0"
description = "Consistency checks and maintenance scripts for semver-trust/spec"
requires-python = ">=3.11"
license = "Apache-2.0"

[dependency-groups]
dev = [
    "jsonschema>=4.21",
    "rfc3339-validator>=0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".agents",
    ".claude",
    ".codex",
    ".devbox",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"

